dark mode finished, with bugs in studyplan page solved.

--- a/frontend/src/StudyPlan/StudyPlan.css
+++ b/frontend/src/StudyPlan/StudyPlan.css
@@ -1,6 +1,9 @@
 .studyplan {
-    display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 3rem;
+    position: absolute;
+    display: block;
+    left: 20%; 
+    top: 12%;
+    width: 75vw;
 }
